k8/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diwali-fe-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diwali-fe
  template:
    metadata:
      labels:
        app: diwali-fe
    spec:
      containers:
        - name: diwali-fe
          image: diwali.azurecr.io/diwali-fe:1.0.3
          # resources:
          #   requests:
          #     memory: "256Mi"
          #     cpu: "200m"
          #   limits:
          #     memory: "512Mi"
          #     cpu: "400m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: diwali-fe-service
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "product_service_rg"
spec:
  type: LoadBalancer
  loadBalancerIP: 40.121.150.44 # Replace with your static IP
  selector:
    app: diwali-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
