k8/acme-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diwali-ingress-acme-challenge
  namespace: diwali-dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: diwaliinquiries.in
    http:
      paths:
      - path: /.well-known/acme-challenge/
        pathType: ImplementationSpecific
        backend:
          service:
            name: diwali-fe-service
            port:
              number: 80
