k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diwali-ingress-dev
  namespace: diwali-dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - diwaliinquiries.in
    secretName: tls-secret
  rules:
  - host: diwaliinquiries.in
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: diwali-be-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: diwali-fe-service
            port:
              number: 80
